Fix flickering bottom navigation

--- a/Shared/Components/BottomNavigation.razor.css
+++ b/Shared/Components/BottomNavigation.razor.css
@@ -59,14 +59,12 @@
         color: var(--color-accent);
         stroke: var(--color-accent);
     }
-}
 
-.navigation ::deep a:active {
-    color: var(--color-accent);
-    stroke: var(--color-accent);
-}
+    .navigation ::deep a:active {
+        color: var(--color-accent);
+        stroke: var(--color-accent);
+    }
 
-@media (hover: hover) {
     .navigation ::deep a:active {
         transform: scale(0.9);
     }
